Fixed scrollbar

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body{
     min-width: 100%;
     max-width: 100%;
     max-height: 100%;
+    overflow: overlay;
     background-attachment:fixed;
     background-size: cover;
 	background-position: center;
